@startuml

entity "Customer" as Customer {
  +ID (PK)
  --
  Name
  Email
  Document
  Password
  CreatedAt
}


entity "Product" as Product {
  +ID (PK)
  --
  Name
  Desc
  Price
  Category
  ImagePath
}

entity "Order_Items" as OrderItems {
  +ID (PK)
  --
  OrderID (FK)
  ProductID (FK)
  Quantity
}

entity "Order" as Order {
  +ID (PK)
  --
  CustomerID (FK)
  PaymentID (FK)
  Status
  CreatedAt
  UpdatedAt
  Total
}

entity "Payment" as Payment {
  +ID (PK)
  --
  PaymentType
  CreatedAt
}

Customer -- Order
Order -- OrderItems
Order -- Payment
OrderItems -- Product

@enduml